src/components/20-molecules/dropdown/index.scss
@import '../../00-materials/styles/mixins/check-mark-animated';

$border-width: 1px;
$dropdown-color: $color-prim-gray-mine-shaft !default;
$dropdown-color--hover: $color-axa-blue !default;
$dropdown-border-width: 1px;
$dropdown-border-style: $dropdown-border-width solid $color-prim-gray-silver;
$dropdown-bottom-border-width: 2px;
$dropdown-height: 40px;
$dropdown-icon-width: 10px;
$dropdown-icon-height: 6px;
$dropdown-error-minheight: 19px;

@mixin normalize-native-select-styles() {
  appearance: none;
  -webkit-appearance: none;
  background: transparent;
  border: none;
  color: inherit;

  &:active,
  &:focus {
    border: none;
    box-shadow: none;
    outline: none;
  }

  &::-moz-focus-inner,
  option::-moz-focus-inner {
    border: none;
    box-shadow: none;
    outline: none;
  }

  &:focus::-ms-value {
    color: inherit;
    background: transparent;
  }

  &::-ms-expand {
    display: none;
  }
}

axa-dropdown {
  display: block;

  &[open] {
    .m-dropdown__content {
      height: auto;
    }

    .m-dropdown__select-icon svg {
      transform: rotate(180deg);
    }

    &[max-height][embedded] {
      .m-dropdown__content {
        border: $dropdown-border-style;
        border-top: none;
      }
    }
  }

  &:not([open]) {

    .m-dropdown__toggle:focus {
      outline-width:2px;
    }
  }

  &[max-height] {
    .m-dropdown__content {
      max-height: 347px;
      overflow-y: auto;
      overflow-x: hidden;
    }

    .m-dropdown__item {
      border-left: none;
      border-right: none;
    }

    .m-dropdown__button {
      text-overflow: initial;
    }
  }

  &[valid] .m-dropdown__valid-icon {
    visibility: visible;
  }

  &[error] .m-dropdown {

    &__list {
      border-color: $color-validation-error;
    }

    &__error {
      visibility: visible;
    }
  }

  &[embedded] {
    .m-dropdown__valid-icon,
    .m-dropdown__error {
      display: none;
    }
  }
}

.m-dropdown {
  display: flex;
  align-items: center;
  position: relative;
  @include typo(primary, small);

  &__list {
    padding: 10.5px 20px 10.5px 12px;
    background: $color-prim-white;
    border: 1px solid $color-prim-gray-silver;
    color: $dropdown-color;
    height: $dropdown-height;
    position: relative;
    display: block;
    width: 100%;
    padding: 0;
    cursor: pointer;

    &:hover,
    &:active,
    &:focus {
      outline: none;
      border-color: $dropdown-color--hover;

      .m-dropdown--icon,
      .m-dropdown__icon {
        color: $dropdown-color--hover;
      }
    }
  }

  &__valid-icon {
    visibility: hidden;
    line-height: $dropdown-height;
    color: $color-validation-valid;
      @include check-mark-animated-wrapper();
      margin-left: 10px;

      &-inner-active {
        @include check-mark-animated();
        margin-top: -4px;
      }
  }

  &__error {
    visibility: hidden;
    margin-top: 10px;
    line-height: 1.2;
    color: $color-validation-error;
    min-height: $dropdown-error-minheight;
  }

  &__select {
    @include normalize-native-select-styles();
    @include typo(primary, small);
    min-width: 100px;
    width: 100%;
    padding: 10px 40px 10px 20px;
    height: $dropdown-height;
    line-height: normal;
  }

  &__select,
  &__button {
    cursor: pointer;
  }

  &__select-icon {
    display: block;
    width: 40px;
    height: $dropdown-height;
    line-height: $dropdown-height - $dropdown-icon-height + 4px;
    background: $color-prim-white;
    position: absolute;
    right: 0;
    top: 0;
    pointer-events: none;
    text-align: center;

    svg {
      width: $dropdown-icon-width;
      height: $dropdown-icon-height;
      color: $color-axa-blue;
      transition: transform 0.3s ease;
      pointer-events: none;
      line-height: 0;
      -ms-interpolation-mode: nearest-neighbor;
    }
  }

  &__select-option--hidden {
    display: none;
  }

  &__toggle {
    @include typo(primary, small);
    position: relative;
    background: transparent;
    border: none;
    height: $dropdown-height;
    text-align: left;
    cursor: pointer;
    line-height: 15px;

    &:hover,
    &:active,
    &:focus {
      outline: solid 1px $color-axa-blue;
    }

    span {
      padding-left: 10px;
    }
  }

  &__content {
    padding: 0;
    margin: 0;
    list-style: none;
    position: absolute;
    top: 100%;
    left: -1px;
    right: -1px;
    z-index: 2;
    height: 0;
    min-width: 100%;
    overflow: hidden;
    transition: height 0.3s ease;
    margin-top: -$dropdown-border-width;
    background: $color-prim-white;
  }

  &__option,
  &__toggle,
  &__button {
    padding: 10px 40px 10px 10px;
    width: 100%;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
  }

  &__button {
    @include typo(primary, small);
    display: block;
    width: 100%;
    text-align: left;
    background: transparent;
    border: 0;
    color: $dropdown-color;
    white-space: nowrap;
    margin: 0; /* for Safari, who'd impose 2px margins otherwise */


    &:hover,
    &:active,
    &:focus {
      outline: 0;
      color: $dropdown-color--hover;
      text-decoration: none;
      background: $color-prim-gray-wild-sand;
    }

    &:focus,
    &:active {
      outline: solid 2px $color-axa-blue;
    }
  }

  &__item {
    border-left: $dropdown-border-style;
    border-right: $dropdown-border-style;

    &--is-selected .m-dropdown__button {
      background: $color-prim-gray-wild-sand;
      color: $dropdown-color--hover;
    }

    &:first-child {
      border-top: $dropdown-border-style;
    }

    &:last-child {
      border-bottom: $dropdown-bottom-border-width solid $color-prim-gray-silver;
    }
  }

  &__list--native {

    &:focus,
    &:active {
      outline: solid 2px $color-axa-blue;
      border: none;
    }

    @include breakpoint($mediaquery-md-up) {
      display: none;
    }
  }

  &__list--enhanced {
    display: none;

    @include breakpoint($mediaquery-md-up) {
      display: block;
    }
  }

  &--native-only {
    .m-dropdown__list--native {
      display: block;
    }
    .m-dropdown__list--enhanced {
      display: none;

      @include breakpoint($mediaquery-md-up) {
        display: none;
      }
    }
  }
}

